# testing

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
core/account/: admin.py  models.py
core/account/api/: serializers.py  token_signals.py  urls.py  views.py
core/account/migrations/: 0001_initial.py
core/general/utills/: collections.py  misc.py
core/helper/: generate_token.py  send_mail.py  utils.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
core/templates/: activate_account_link.html  reset_password.html
scripts/: entrypoint.sh
